[package]
name = "druid-color-picker"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git="https://github.com/xi-editor/druid/"}
druid-shell = { git="https://github.com/xi-editor/druid/" }
piet = "0.0.2"
kurbo = "0.2.1"
nalgebra = "0.18"
rbf-interp = "0.1.1"